--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux-promise-middleware": "^6.1.2",
     "sass": "^1.37.5",
     "typescript": "^4.3.5",
+    "typewriter-effect": "^2.18.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
