--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.1.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.22",
     "react-scripts": "4.0.3",
     "redux-devtools-extension": "^2.13.9",
     "redux-promise-middleware": "^6.1.2",
